# NutriTrackAI

./: .gitignore  README.md  example.env  pyproject.toml  requirements.txt
data/raw/: nutrition_reference.json  recipes_sample.csv
src/: __init__.py  app.py  config.py
src/agent/: middleware.py  orchestrator.py
src/core/: db.py  embeddings.py  llm.py  memory.py  prompts.py  rag.py  schemas.py  utils.py
src/pages/: 1_🔢_Daily_Log.py  2_📅_Plan_My_Week.py  4_👩‍🍳_Cooking_Assistant.py  5_📈_Progress.py
src/tools/: calorie_tracker.py  cooking_assistant.py  grocery_list.py  ingredient_weights.py  meal_planner.py  tool_registry.py
src/ui/: components.py
src/ui/pages/: 1_🔢_Daily_Log.py  2_📅_Plan_My_Week.py  3_🛒_Grocery_List.py  4_👩‍🍳_Cooking_Assistant.py  5_📈_Progress.py
tests/: test_config.py  test_macros.py  test_rag.py  test_tools.py
